--- a/пераклады модаў/De Re Militari/5.0.7/Belarusian.De Re Militari/ModuleData/Languages/BYc/drm_spnpc_hide.xml
+++ b/пераклады модаў/De Re Militari/5.0.7/Belarusian.De Re Militari/ModuleData/Languages/BYc/drm_spnpc_hide.xml
@@ -30,7 +30,7 @@
   <string id="iXjMfCyp" text="Хузаіцкі Коньнік"/>
   <string id="UYPaQP2j" text="Хузаіцкі Канклі"/>
   <string id="lkrV8jZa" text="Хузаіцкі Лучнік"/>
-  <string id="6UFEfIJV" text="Хузаіцкі Капійнічы Пяхотны"/>
+  <string id="6UFEfIJV" text="Хузаіцкі Капійнічы Пяхотнік"/>
   <string id="eHVgfyPH" text="Хузаіцкі Конны Лучнік"/>
   <string id="lumFaIud" text="Хузаіцкі Ўлан"/>
   <string id="QhNpvW0Y" text="Хузаіцкі Торгуд"/>
@@ -57,9 +57,9 @@
   <string id="RJNNsaSP" text="Стургійскі Разбойнік"/>
   <string id="VbWtdAWn" text="Стургійскі Загартаваны Разбойнік"/>
   <string id="xnzpQbwQ" text="Стургійскі Конны Налётнік"/>
-  <string id="Sc1d2lsH" text="Стургійскі Разбуральнік Шыхту"/>
+  <string id="Sc1d2lsH" text="Стургійскі Руйнавальнік Шыхтоў"/>
   <string id="CfO7eDsv" text="Стургійскі Капійнік"/>
-  <string id="CJxF6fky" text="Стургійскі Гераічны Разбуральнік Шыхту"/>
+  <string id="CJxF6fky" text="Стургійскі Гераічны Руйнавальнік Шыхтоў"/>
   <string id="GEnwDYp1" text="Вландыйскі Рэкрут"/>
   <string id="yPF32fbh" text="Вландыйскі Пяхотны"/>
   <string id="Gd0y7SxJ" text="Вландыйскі Капійнік"/>
@@ -81,26 +81,26 @@
   <string id="oseSwa56" text="Вландыйскі Рыцар"/>
   <string id="3VosbFR0" text="Вландыйскі Чэмпіён"/>
   <string id="bTApMxWr" text="Вландыйскі Рыцар Сьцяга"/>
-  <string id="H5HJUejD" text="Эсэрайскі Рэкрут"/>
-  <string id="arb5nRri" text="Эсэрайскі Суродзіч"/>
-  <string id="wtmCSMrC" text="Эсэрайскі Пяхотнік"/>
-  <string id="5VBPoGYO" text="Эсэрайскі Лёгкі Лучнік"/>
-  <string id="yhBagy1Y" text="Эсэрайскі Лучнік"/>
-  <string id="B4ls6R2b" text="Эсэрайскі Лучнік-Майстар"/>
-  <string id="tke6VCV6" text="Эсэрайскі Пяхотны"/>
-  <string id="g1zvdEE3" text="Эсэрайскі Ветэран Пяхотны"/>
-  <string id="zEQTwpnv" text="Эсэрайскі Мамлюк-Салдат"/>
-  <string id="WJbOQSiT" text="Эсэрайскі Мамлюк-Шарагавы"/>
-  <string id="YUCzyA8C" text="Эсэрайскі Мамлюк-Вершнік"/>
-  <string id="JVG0zC4e" text="Эсэрайскі Мамлюк Цяжкі Вершнік"/>
-  <string id="vZlMfmng" text="Эсэрайскі Мамлюк-Сякірнік"/>
-  <string id="F54qLieU" text="Эсэрайскі Мамлюк-Вартавы"/>
-  <string id="tDYfuUuU" text="Эсэрайскі Мамлюк Палацавы Вартавы"/>
-  <string id="Gvy2b4fa" text="Эсэрайскі Маладзён"/>
-  <string id="dfv7E49q" text="Эсэрайскі Пляменны Коньнік"/>
-  <string id="jaK1A7CI" text="Эсэрайскі Фарыс"/>
-  <string id="6oc7CXbI" text="Эсэрайскі Фарыс-Ветэран"/>
-  <string id="AoFZUbun" text="Эсэрайскі Фарыс-Авангард"/>
+  <string id="H5HJUejD" text="Асэрайскі Рэкрут"/>
+  <string id="arb5nRri" text="Асэрайскі Суродзіч"/>
+  <string id="wtmCSMrC" text="Асэрайскі Пяхотнік"/>
+  <string id="5VBPoGYO" text="Асэрайскі Лёгкі Лучнік"/>
+  <string id="yhBagy1Y" text="Асэрайскі Лучнік"/>
+  <string id="B4ls6R2b" text="Асэрайскі Лучнік-Майстар"/>
+  <string id="tke6VCV6" text="Асэрайскі Пяхотны"/>
+  <string id="g1zvdEE3" text="Асэрайскі Ветэран Пяхотны"/>
+  <string id="zEQTwpnv" text="Асэрайскі Мамлюк-Салдат"/>
+  <string id="WJbOQSiT" text="Асэрайскі Мамлюк-Шарагавы"/>
+  <string id="YUCzyA8C" text="Асэрайскі Мамлюк-Вершнік"/>
+  <string id="JVG0zC4e" text="Асэрайскі Мамлюк Цяжкі Вершнік"/>
+  <string id="vZlMfmng" text="Асэрайскі Мамлюк-Сякірнік"/>
+  <string id="F54qLieU" text="Асэрайскі Мамлюк-Вартавы"/>
+  <string id="tDYfuUuU" text="Асэрайскі Мамлюк Палацавы Вартавы"/>
+  <string id="Gvy2b4fa" text="Асэрайскі Маладзён"/>
+  <string id="dfv7E49q" text="Асэрайскі Пляменны Коньнік"/>
+  <string id="jaK1A7CI" text="Асэрайскі Фарыс"/>
+  <string id="6oc7CXbI" text="Асэрайскі Фарыс-Ветэран"/>
+  <string id="AoFZUbun" text="Асэрайскі Фарыс-Авангард"/>
   <string id="GUQ3zfg2" text="Баттанійскі Самаахвотнік"/>
   <string id="VtlvxEs7" text="Баттанійскі Ваяр Клану"/>
   <string id="HMHzTNqJ" text="Баттанійскі Навучаны Ваяр"/>
@@ -177,10 +177,10 @@
   <string id="R74i2pQz" text="Найманае Лязо"/>
   <string id="QfVe3IVw" text="Найманы Арбалетнік"/>
   <string id="SaqVvzyV" text="Найміт-Вершнік"/>
-  <string id="CPcJ2gRF" text="Эсэрайскі Лучнік Рушэньня"/>
-  <string id="tL6aGah4" text="Эсэрайскі Лучнік-Ветэран Рушэньня"/>
-  <string id="ULaNn3pp" text="Эсэрайскі Капійнік Рушэньня"/>
-  <string id="Pd9qAiOu" text="Эсэрайскі Капійнік-Ветэран Рушэньня"/>
+  <string id="CPcJ2gRF" text="Асэрайскі Лучнік Рушэньня"/>
+  <string id="tL6aGah4" text="Асэрайскі Лучнік-Ветэран Рушэньня"/>
+  <string id="ULaNn3pp" text="Асэрайскі Капійнік Рушэньня"/>
+  <string id="Pd9qAiOu" text="Асэрайскі Капійнік-Ветэран Рушэньня"/>
   <string id="Ah4XG5Fp" text="Вландыйскі Арбалетнік Рушэньня"/>
   <string id="zqaGJBYZ" text="Вландыйскі Арбалетнік-Ветэран Рушэньня"/>
   <string id="aUHtqC9o" text="Вландыйскі Капійнік Рушэньня"/>
@@ -210,9 +210,9 @@
   <string id="ZKdiaaFo" text="Разбойнік"/>
   <string id="P6Md9DpR" text="Прыдарожны Грабежнік"/>
   <string id="HadsURl8" text="Куставы Лайдак"/>
-  <string id="freebootertroop" text="Вольнаногі"/>
+  <string id="freebootertroop" text="Босаногі"/>
   <string id="sFgODQ1q" text="Лясны Бандыт"/>
-  <string id="uOAnHN47" text="Бедуін-Вандроўнік"/>
+  <string id="uOAnHN47" text="Бедуін-Падарожнік"/>
   <string id="0qDNS83n" text="Качэўнік-Бандыт"/>
   <string id="cdbSCr6G" text="Харамі"/>
   <string id="ZA4bgJ5V" text="Стэпавы Бандыт"/>
@@ -236,19 +236,19 @@
   <string id="n89z19Dv" text="Найманая Піка"/>
   <string id="7WV17e5Q" text="Найманая Элітная Піка"/>
   <string id="DxtSIxyZ" text="Найманы Элітны Арбалет"/>
-  <string id="8TdbKFa9" text="Эсэрайскі Ўзброены Гандляр"/>
+  <string id="8TdbKFa9" text="Асэрайскі Ўзброены Гандляр"/>
   <string id="v8hRrmY2" text="Баттанійскі Ўзброены Гандляр"/>
   <string id="LEJukldW" text="Імперскі Ўзброены Гандляр"/>
   <string id="l6NFOl8c" text="Хузаіцкі Ўзброены Гандляр"/>
   <string id="cPQx1RXt" text="Стургійскі Ўзброены Гандляр"/>
   <string id="X12lazIs" text="Вландыйскі Ўзброены Гандляр"/>
-  <string id="yG42k5GC" text="Эсэрайскі Ахоўнік Караванаў"/>
+  <string id="yG42k5GC" text="Асэрайскі Ахоўнік Караванаў"/>
   <string id="qfaTMEBw" text="Баттанійскі Ахоўнік Караванаў"/>
   <string id="TbBnWiao" text="Імперскі Ахоўнік Караванаў"/>
   <string id="THOfB9DZ" text="Хузаіцкі Ахоўнік Караванаў"/>
   <string id="pzmgMODE" text="Стургійскі Ахоўнік Караванаў"/>
   <string id="rQ0t0Wws" text="Вландыйскі Ахоўнік Караванаў"/>
-  <string id="QlVeZvbv" text="Эсэрайскі Ахоўнік Караванаў Ветэран"/>
+  <string id="QlVeZvbv" text="Асэрайскі Ахоўнік Караванаў Ветэран"/>
   <string id="juBPAThy" text="Баттанійскі Ахоўнік Караванаў Ветэран"/>
   <string id="bLq2HXMo" text="Імперскі Ахоўнік Караванаў Ветэран"/>
   <string id="6hhspFvz" text="Хузаіцкі Ахоўнік Караванаў Ветэран"/>
