--- a/пераклады модаў/De Re Militari/5.0.7/Belarusian.De Re Militari/ModuleData/Languages/BYl/drm_spnpc_hide.xml
+++ b/пераклады модаў/De Re Militari/5.0.7/Belarusian.De Re Militari/ModuleData/Languages/BYl/drm_spnpc_hide.xml
@@ -30,7 +30,7 @@
   <string id="iXjMfCyp" text="Chuzaicki Końnik"/>
   <string id="UYPaQP2j" text="Chuzaicki Kankli"/>
   <string id="lkrV8jZa" text="Chuzaicki Łučnik"/>
-  <string id="6UFEfIJV" text="Chuzaicki Kapijničy Piachotny"/>
+  <string id="6UFEfIJV" text="Chuzaicki Kapijničy Piachotnik"/>
   <string id="eHVgfyPH" text="Chuzaicki Konny Łučnik"/>
   <string id="lumFaIud" text="Chuzaicki Ŭłan"/>
   <string id="QhNpvW0Y" text="Chuzaicki Torhud"/>
@@ -57,9 +57,9 @@
   <string id="RJNNsaSP" text="Sturhijski Razbojnik"/>
   <string id="VbWtdAWn" text="Sturhijski Zahartavany Razbojnik"/>
   <string id="xnzpQbwQ" text="Sturhijski Konny Nalotnik"/>
-  <string id="Sc1d2lsH" text="Sturhijski Razburalnik Šychtu"/>
+  <string id="Sc1d2lsH" text="Sturhijski Rujnavalnik Šychtoŭ"/>
   <string id="CfO7eDsv" text="Sturhijski Kapijnik"/>
-  <string id="CJxF6fky" text="Sturhijski Hieraičny Razburalnik Šychtu"/>
+  <string id="CJxF6fky" text="Sturhijski Hieraičny Rujnavalnik Šychtoŭ"/>
   <string id="GEnwDYp1" text="Vłandyjski Rekrut"/>
   <string id="yPF32fbh" text="Vłandyjski Piachotny"/>
   <string id="Gd0y7SxJ" text="Vłandyjski Kapijnik"/>
@@ -81,26 +81,26 @@
   <string id="oseSwa56" text="Vłandyjski Rycar"/>
   <string id="3VosbFR0" text="Vłandyjski Čempijon"/>
   <string id="bTApMxWr" text="Vłandyjski Rycar Ściaha"/>
-  <string id="H5HJUejD" text="Eserajski Rekrut"/>
-  <string id="arb5nRri" text="Eserajski Surodzič"/>
-  <string id="wtmCSMrC" text="Eserajski Piachotnik"/>
-  <string id="5VBPoGYO" text="Eserajski Lohki Łučnik"/>
-  <string id="yhBagy1Y" text="Eserajski Łučnik"/>
-  <string id="B4ls6R2b" text="Eserajski Łučnik-Majstar"/>
-  <string id="tke6VCV6" text="Eserajski Piachotny"/>
-  <string id="g1zvdEE3" text="Eserajski Vieteran Piachotny"/>
-  <string id="zEQTwpnv" text="Eserajski Mamluk-Sałdat"/>
-  <string id="WJbOQSiT" text="Eserajski Mamluk-Šarahavy"/>
-  <string id="YUCzyA8C" text="Eserajski Mamluk-Vieršnik"/>
-  <string id="JVG0zC4e" text="Eserajski Mamluk Ciažki Vieršnik"/>
-  <string id="vZlMfmng" text="Eserajski Mamluk-Siakirnik"/>
-  <string id="F54qLieU" text="Eserajski Mamluk-Vartavy"/>
-  <string id="tDYfuUuU" text="Eserajski Mamluk Pałacavy Vartavy"/>
-  <string id="Gvy2b4fa" text="Eserajski Maładzion"/>
-  <string id="dfv7E49q" text="Eserajski Plamienny Końnik"/>
-  <string id="jaK1A7CI" text="Eserajski Farys"/>
-  <string id="6oc7CXbI" text="Eserajski Farys-Vieteran"/>
-  <string id="AoFZUbun" text="Eserajski Farys-Avanhard"/>
+  <string id="H5HJUejD" text="Aserajski Rekrut"/>
+  <string id="arb5nRri" text="Aserajski Surodzič"/>
+  <string id="wtmCSMrC" text="Aserajski Piachotnik"/>
+  <string id="5VBPoGYO" text="Aserajski Lohki Łučnik"/>
+  <string id="yhBagy1Y" text="Aserajski Łučnik"/>
+  <string id="B4ls6R2b" text="Aserajski Łučnik-Majstar"/>
+  <string id="tke6VCV6" text="Aserajski Piachotny"/>
+  <string id="g1zvdEE3" text="Aserajski Vieteran Piachotny"/>
+  <string id="zEQTwpnv" text="Aserajski Mamluk-Sałdat"/>
+  <string id="WJbOQSiT" text="Aserajski Mamluk-Šarahavy"/>
+  <string id="YUCzyA8C" text="Aserajski Mamluk-Vieršnik"/>
+  <string id="JVG0zC4e" text="Aserajski Mamluk Ciažki Vieršnik"/>
+  <string id="vZlMfmng" text="Aserajski Mamluk-Siakirnik"/>
+  <string id="F54qLieU" text="Aserajski Mamluk-Vartavy"/>
+  <string id="tDYfuUuU" text="Aserajski Mamluk Pałacavy Vartavy"/>
+  <string id="Gvy2b4fa" text="Aserajski Maładzion"/>
+  <string id="dfv7E49q" text="Aserajski Plamienny Końnik"/>
+  <string id="jaK1A7CI" text="Aserajski Farys"/>
+  <string id="6oc7CXbI" text="Aserajski Farys-Vieteran"/>
+  <string id="AoFZUbun" text="Aserajski Farys-Avanhard"/>
   <string id="GUQ3zfg2" text="Battanijski Samaachvotnik"/>
   <string id="VtlvxEs7" text="Battanijski Vajar Kłanu"/>
   <string id="HMHzTNqJ" text="Battanijski Navučany Vajar"/>
@@ -177,10 +177,10 @@
   <string id="R74i2pQz" text="Najmanaje Lazo"/>
   <string id="QfVe3IVw" text="Najmany Arbaletnik"/>
   <string id="SaqVvzyV" text="Najmit-Vieršnik"/>
-  <string id="CPcJ2gRF" text="Eserajski Łučnik Rušeńnia"/>
-  <string id="tL6aGah4" text="Eserajski Łučnik-Vieteran Rušeńnia"/>
-  <string id="ULaNn3pp" text="Eserajski Kapijnik Rušeńnia"/>
-  <string id="Pd9qAiOu" text="Eserajski Kapijnik-Vieteran Rušeńnia"/>
+  <string id="CPcJ2gRF" text="Aserajski Łučnik Rušeńnia"/>
+  <string id="tL6aGah4" text="Aserajski Łučnik-Vieteran Rušeńnia"/>
+  <string id="ULaNn3pp" text="Aserajski Kapijnik Rušeńnia"/>
+  <string id="Pd9qAiOu" text="Aserajski Kapijnik-Vieteran Rušeńnia"/>
   <string id="Ah4XG5Fp" text="Vłandyjski Arbaletnik Rušeńnia"/>
   <string id="zqaGJBYZ" text="Vłandyjski Arbaletnik-Vieteran Rušeńnia"/>
   <string id="aUHtqC9o" text="Vłandyjski Kapijnik Rušeńnia"/>
@@ -210,9 +210,9 @@
   <string id="ZKdiaaFo" text="Razbojnik"/>
   <string id="P6Md9DpR" text="Prydarožny Hrabiežnik"/>
   <string id="HadsURl8" text="Kustavy Łajdak"/>
-  <string id="freebootertroop" text="Volnanohi"/>
+  <string id="freebootertroop" text="Bosanohi"/>
   <string id="sFgODQ1q" text="Lasny Bandyt"/>
-  <string id="uOAnHN47" text="Bieduin-Vandroŭnik"/>
+  <string id="uOAnHN47" text="Bieduin-Padarožnik"/>
   <string id="0qDNS83n" text="Kačeŭnik-Bandyt"/>
   <string id="cdbSCr6G" text="Charami"/>
   <string id="ZA4bgJ5V" text="Stepavy Bandyt"/>
@@ -236,19 +236,19 @@
   <string id="n89z19Dv" text="Najmanaja Pika"/>
   <string id="7WV17e5Q" text="Najmanaja Elitnaja Pika"/>
   <string id="DxtSIxyZ" text="Najmany Elitny Arbalet"/>
-  <string id="8TdbKFa9" text="Eserajski Ŭzbrojeny Handlar"/>
+  <string id="8TdbKFa9" text="Aserajski Ŭzbrojeny Handlar"/>
   <string id="v8hRrmY2" text="Battanijski Ŭzbrojeny Handlar"/>
   <string id="LEJukldW" text="Impierski Ŭzbrojeny Handlar"/>
   <string id="l6NFOl8c" text="Chuzaicki Ŭzbrojeny Handlar"/>
   <string id="cPQx1RXt" text="Sturhijski Ŭzbrojeny Handlar"/>
   <string id="X12lazIs" text="Vłandyjski Ŭzbrojeny Handlar"/>
-  <string id="yG42k5GC" text="Eserajski Achoŭnik Karavanaŭ"/>
+  <string id="yG42k5GC" text="Aserajski Achoŭnik Karavanaŭ"/>
   <string id="qfaTMEBw" text="Battanijski Achoŭnik Karavanaŭ"/>
   <string id="TbBnWiao" text="Impierski Achoŭnik Karavanaŭ"/>
   <string id="THOfB9DZ" text="Chuzaicki Achoŭnik Karavanaŭ"/>
   <string id="pzmgMODE" text="Sturhijski Achoŭnik Karavanaŭ"/>
   <string id="rQ0t0Wws" text="Vłandyjski Achoŭnik Karavanaŭ"/>
-  <string id="QlVeZvbv" text="Eserajski Achoŭnik Karavanaŭ Vieteran"/>
+  <string id="QlVeZvbv" text="Aserajski Achoŭnik Karavanaŭ Vieteran"/>
   <string id="juBPAThy" text="Battanijski Achoŭnik Karavanaŭ Vieteran"/>
   <string id="bLq2HXMo" text="Impierski Achoŭnik Karavanaŭ Vieteran"/>
   <string id="6hhspFvz" text="Chuzaicki Achoŭnik Karavanaŭ Vieteran"/>
