--- a/пераклады модаў/High Middle Ages Calradia/1.6.0/Belarusian.High Middle Ages Calradia/ModuleData/Languages/BYc/troops.xml
+++ b/пераклады модаў/High Middle Ages Calradia/1.6.0/Belarusian.High Middle Ages Calradia/ModuleData/Languages/BYc/troops.xml
@@ -1,29 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <base xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema" type="string">
  <strings>
-  <string id="Aserai Tribesman" text="Эсэрайскі Суродзіч"/>
-  <string id="Aserai Trained Tribesman" text="Эсэрайскі Падрыхтаваны Суродзіч"/>
-  <string id="Aserai Shieldbreaker" text="Эсэрайскі Руйнавальнік Шчытоў"/>
-  <string id="Aserai Footman" text="Эсэрайскі Пяхотнік"/>
-  <string id="Aserai Pikeman" text="Эсэрайскі Пікінёр"/>
-  <string id="Aserai Heavy Footman" text="Эсэрайскі Цяжкі Пяхотнік"/>
+  <string id="Aserai Tribesman" text="Асэрайскі Суродзіч"/>
+  <string id="Aserai Trained Tribesman" text="Асэрайскі Падрыхтаваны Суродзіч"/>
+  <string id="Aserai Shieldbreaker" text="Асэрайскі Руйнавальнік Шчытоў"/>
+  <string id="Aserai Footman" text="Асэрайскі Пяхотнік"/>
+  <string id="Aserai Pikeman" text="Асэрайскі Пікінёр"/>
+  <string id="Aserai Heavy Footman" text="Асэрайскі Цяжкі Пяхотнік"/>
   <string id="Mubarizun" text="Мубарызун"/>
   <string id="Bedouin Hunter" text="Бедуін-Паляўнічы"/>
-  <string id="Aserai Bowman" text="Эсэрайскі Лучнік"/>
-  <string id="Aserai Veteran Bowman" text="Эсэрайскі Лучнік-Ветэран"/>
+  <string id="Aserai Bowman" text="Асэрайскі Лучнік"/>
+  <string id="Aserai Veteran Bowman" text="Асэрайскі Лучнік-Ветэран"/>
   <string id="Palace Guard" text="Палацавы Вартавы"/>
-  <string id="Aserai Outrider" text="Эсэрайскі Межавы Наезьнік"/>
-  <string id="Aserai Cameleer" text="Эсэрайскі Вярблюджы"/>
-  <string id="Aserai Mamluke Cavalry" text="Эсэрайскі Мамлюк-Вершнік"/>
-  <string id="Aserai Noble's Son" text="Эсэрайскі Шляхетны Сын"/>
-  <string id="Aserai Noble" text="Эсэрайскі Шляхціч"/>
-  <string id="Aserai Faris" text="Эсэрайскі Фарыс"/>
-  <string id="Aserai Veteran Faris" text="Эсэрайскі Фарыс-Ветэран"/>
-  <string id="Aserai Vanguard Faris" text="Эсэрайскі Фарыс-Авангард"/>
-  <string id="CPcJ2gRF" text="Эсэрайскі Лучнік Рушэньня"/>
-  <string id="Aserai Trained Militia Archer" text="Эсэрайскі Падрыхтаваны Лучнік Рушэньня"/>
-  <string id="Aserai Militia" text="Эсэрайскі Рушэнны"/>
-  <string id="Aserai Trained Militia" text="Эсэрайскі Падрыхтаваны Рушэнны"/>
+  <string id="Aserai Outrider" text="Асэрайскі Межавы Наезьнік"/>
+  <string id="Aserai Cameleer" text="Асэрайскі Вярблюджы"/>
+  <string id="Aserai Mamluke Cavalry" text="Асэрайскі Мамлюк-Вершнік"/>
+  <string id="Aserai Noble's Son" text="Асэрайскі Шляхетны Сын"/>
+  <string id="Aserai Noble" text="Асэрайскі Шляхціч"/>
+  <string id="Aserai Faris" text="Асэрайскі Фарыс"/>
+  <string id="Aserai Veteran Faris" text="Асэрайскі Фарыс-Ветэран"/>
+  <string id="Aserai Vanguard Faris" text="Асэрайскі Фарыс-Авангард"/>
+  <string id="CPcJ2gRF" text="Асэрайскі Лучнік Рушэньня"/>
+  <string id="Aserai Trained Militia Archer" text="Асэрайскі Падрыхтаваны Лучнік Рушэньня"/>
+  <string id="Aserai Militia" text="Асэрайскі Рушэнны"/>
+  <string id="Aserai Trained Militia" text="Асэрайскі Падрыхтаваны Рушэнны"/>
   <string id="r3oIoCr8" text="Ункід"/>
   <string id="Battanian Shire Levy" text="Баттанійскі Графскі Заклічнік"/>
   <string id="Battanian Seasoned Shire Levy" text="Баттанійскі Загартаваны Графскі Заклічнік"/>
@@ -75,9 +75,9 @@
   <string id="Imperial Trained Militia Archer" text="Імперскі Падрыхтаваны Лучнік Рушэньня"/>
   <string id="Imperial Militia" text="Імперскі Рушэнны"/>
   <string id="Imperial Trained Militia" text="Імперскі Падрыхтаваны Рушэнны"/>
-  <string id="CLqPbdiZ" text="Люкан"/>
+  <string id="CLqPbdiZ" text="Люкон"/>
   <string id="I72U5ttG" text="Гарыёс"/>
-  <string id="kadJAjaA" text="Рыджыя"/>
+  <string id="kadJAjaA" text="Рагаэя"/>
   <string id="Khuzait Nomad" text="Хузаіцкі Качэўнік"/>
   <string id="Khuzait Tribal Warrior" text="Хузаіцкі Пляменны Ваяр"/>
   <string id="Khuzait Shieldbreaker" text="Хузаіцкі Руйнавальнік Шчытоў"/>
@@ -101,7 +101,7 @@
   <string id="Khuzait Trained Militia Archer" text="Хузаіцкі Падрыхтаваны Лучнік Рушэньня"/>
   <string id="Khuzait Militia" text="Хузаіцкі Рушэнны"/>
   <string id="Khuzait Trained Militia" text="Хузаіцкі Падрыхтаваны Рушэнны"/>
-  <string id="Toj0vayQ" text="Моньчаг"/>
+  <string id="Toj0vayQ" text="Мончуг"/>
   <string id="KnhpjA7Y" text="Кальман"/>
   <string id="ghilmanUnit" text="Гільман"/>
   <string id="7EUhAv8b" text="Гулам"/>
@@ -165,31 +165,31 @@
   <string id="malethug" text="Бандыт"/>
   <string id="7aRhhGAs" text="Дасьведчаны Бандыт"/>
   <string id="V1hoeBch" text="Бандыт-Майстар"/>
-  <string id="nDoENDqD" text="Эсэрайскі Майстар Караванаў"/>
+  <string id="nDoENDqD" text="Асэрайскі Майстар Караванаў"/>
   <string id="LKb8DXby" text="Баттанійскі Майстар Караванаў"/>
   <string id="TpECDErA" text="Імперскі Майстар Караванаў"/>
   <string id="WEHDGbEE" text="Хузаіцкі Майстар Караванаў"/>
   <string id="uDseaKcb" text="Стургійскі Майстар Караванаў"/>
   <string id="QbSjMefR" text="Вландыйскі Майстар Караванаў"/>
-  <string id="Aserai Hired Bowman" text="Эсэрайскі Наёмны Лучнік"/>
+  <string id="Aserai Hired Bowman" text="Асэрайскі Наёмны Лучнік"/>
   <string id="Battanian Hired Bowman" text="Баттанійскі Наёмны Лучнік"/>
   <string id="Imperial Hired Bowman" text="Імперскі Наёмны Лучнік"/>
   <string id="Khuzait Hired Bowman" text="Хузаіцкі Наёмны Лучнік"/>
   <string id="Sturgian Hired Bowman" text="Стургійскі Наёмны Лучнік"/>
   <string id="Vlandian Hired Bowman" text="Вландыйскі Наёмны Лучнік"/>
-  <string id="Aserai Caravan Trader" text="Эсэрайскі Караванны Гандляр"/>
+  <string id="Aserai Caravan Trader" text="Асэрайскі Караванны Гандляр"/>
   <string id="Battanian Caravan Trader" text="Баттанійскі Караванны Гандляр"/>
   <string id="Imperial Caravan Trader" text="Імперскі Караванны Гандляр"/>
   <string id="Khuzait Caravan Trader" text="Хузаіцкі Караванны Гандляр"/>
   <string id="Sturgian Caravan Trader" text="Стургійскі Караванны Гандляр"/>
   <string id="Vlandian Caravan Trader" text="Вландыйскі Караванны Гандляр"/>
-  <string id="yG42k5GC" text="Эсэрайскі Ахоўнік Караванаў"/>
+  <string id="yG42k5GC" text="Асэрайскі Ахоўнік Караванаў"/>
   <string id="qfaTMEBw" text="Баттанійскі Ахоўнік Караванаў"/>
   <string id="TbBnWiao" text="Імперскі Ахоўнік Караванаў"/>
   <string id="THOfB9DZ" text="Хузаіцкі Ахоўнік Караванаў"/>
   <string id="pzmgMODE" text="Стургійскі Ахоўнік Караванаў"/>
   <string id="rQ0t0Wws" text="Вландыйскі Ахоўнік Караванаў"/>
-  <string id="QlVeZvbv" text="Эсэрайскі Ахоўнік Караванаў Ветэран"/>
+  <string id="QlVeZvbv" text="Асэрайскі Ахоўнік Караванаў Ветэран"/>
   <string id="juBPAThy" text="Баттанійскі Ахоўнік Караванаў Ветэран"/>
   <string id="bLq2HXMo" text="Імперскі Ахоўнік Караванаў Ветэран"/>
   <string id="6hhspFvz" text="Хузаіцкі Ахоўнік Караванаў Ветэран"/>
@@ -346,6 +346,6 @@
   <string id="Vlandian Trained Militia Crossbowman" text="Вландыйскі Падрыхтаваны Арбалетнік Рушэньня"/>
   <string id="Vlandian Militia" text="Вландыйскі Рушэнны"/>
   <string id="Vlandian Trained Militia" text="Вландыйскі Падрыхтаваны Рушэнны"/>
-  <string id="jEIsVazl" text="Дэртарт"/>
+  <string id="jEIsVazl" text="Дэртэрт"/>
  </strings>
 </base>
