--- a/пераклады модаў/High Middle Ages Calradia/1.6.0/Belarusian.High Middle Ages Calradia/ModuleData/Languages/BYl/troops.xml
+++ b/пераклады модаў/High Middle Ages Calradia/1.6.0/Belarusian.High Middle Ages Calradia/ModuleData/Languages/BYl/troops.xml
@@ -1,29 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <base xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema" type="string">
  <strings>
-  <string id="Aserai Tribesman" text="Eserajski Surodzič"/>
-  <string id="Aserai Trained Tribesman" text="Eserajski Padrychtavany Surodzič"/>
-  <string id="Aserai Shieldbreaker" text="Eserajski Rujnavalnik Ščytoŭ"/>
-  <string id="Aserai Footman" text="Eserajski Piachotnik"/>
-  <string id="Aserai Pikeman" text="Eserajski Pikinior"/>
-  <string id="Aserai Heavy Footman" text="Eserajski Ciažki Piachotnik"/>
+  <string id="Aserai Tribesman" text="Aserajski Surodzič"/>
+  <string id="Aserai Trained Tribesman" text="Aserajski Padrychtavany Surodzič"/>
+  <string id="Aserai Shieldbreaker" text="Aserajski Rujnavalnik Ščytoŭ"/>
+  <string id="Aserai Footman" text="Aserajski Piachotnik"/>
+  <string id="Aserai Pikeman" text="Aserajski Pikinior"/>
+  <string id="Aserai Heavy Footman" text="Aserajski Ciažki Piachotnik"/>
   <string id="Mubarizun" text="Mubaryzun"/>
   <string id="Bedouin Hunter" text="Bieduin-Palaŭničy"/>
-  <string id="Aserai Bowman" text="Eserajski Łučnik"/>
-  <string id="Aserai Veteran Bowman" text="Eserajski Łučnik-Vieteran"/>
+  <string id="Aserai Bowman" text="Aserajski Łučnik"/>
+  <string id="Aserai Veteran Bowman" text="Aserajski Łučnik-Vieteran"/>
   <string id="Palace Guard" text="Pałacavy Vartavy"/>
-  <string id="Aserai Outrider" text="Eserajski Miežavy Najeźnik"/>
-  <string id="Aserai Cameleer" text="Eserajski Viarbludžy"/>
-  <string id="Aserai Mamluke Cavalry" text="Eserajski Mamluk-Vieršnik"/>
-  <string id="Aserai Nobles Son" text="Eserajski Šlachietny Syn"/>
-  <string id="Aserai Noble" text="Eserajski Šlachcič"/>
-  <string id="Aserai Faris" text="Eserajski Farys"/>
-  <string id="Aserai Veteran Faris" text="Eserajski Farys-Vieteran"/>
-  <string id="Aserai Vanguard Faris" text="Eserajski Farys-Avanhard"/>
-  <string id="CPcJ2gRF" text="Eserajski Łučnik Rušeńnia"/>
-  <string id="Aserai Trained Militia Archer" text="Eserajski Padrychtavany Łučnik Rušeńnia"/>
-  <string id="Aserai Militia" text="Eserajski Rušenny"/>
-  <string id="Aserai Trained Militia" text="Eserajski Padrychtavany Rušenny"/>
+  <string id="Aserai Outrider" text="Aserajski Miežavy Najeźnik"/>
+  <string id="Aserai Cameleer" text="Aserajski Viarbludžy"/>
+  <string id="Aserai Mamluke Cavalry" text="Aserajski Mamluk-Vieršnik"/>
+  <string id="Aserai Nobles Son" text="Aserajski Šlachietny Syn"/>
+  <string id="Aserai Noble" text="Aserajski Šlachcič"/>
+  <string id="Aserai Faris" text="Aserajski Farys"/>
+  <string id="Aserai Veteran Faris" text="Aserajski Farys-Vieteran"/>
+  <string id="Aserai Vanguard Faris" text="Aserajski Farys-Avanhard"/>
+  <string id="CPcJ2gRF" text="Aserajski Łučnik Rušeńnia"/>
+  <string id="Aserai Trained Militia Archer" text="Aserajski Padrychtavany Łučnik Rušeńnia"/>
+  <string id="Aserai Militia" text="Aserajski Rušenny"/>
+  <string id="Aserai Trained Militia" text="Aserajski Padrychtavany Rušenny"/>
   <string id="r3oIoCr8" text="Unkid"/>
   <string id="Battanian Shire Levy" text="Battanijski Hrafski Zakličnik"/>
   <string id="Battanian Seasoned Shire Levy" text="Battanijski Zahartavany Hrafski Zakličnik"/>
@@ -75,9 +75,9 @@
   <string id="Imperial Trained Militia Archer" text="Impierski Padrychtavany Łučnik Rušeńnia"/>
   <string id="Imperial Militia" text="Impierski Rušenny"/>
   <string id="Imperial Trained Militia" text="Impierski Padrychtavany Rušenny"/>
-  <string id="CLqPbdiZ" text="Lukan"/>
+  <string id="CLqPbdiZ" text="Lukon"/>
   <string id="I72U5ttG" text="Haryjos"/>
-  <string id="kadJAjaA" text="Rydžyja"/>
+  <string id="kadJAjaA" text="Rahaeja"/>
   <string id="Khuzait Nomad" text="Chuzaicki Kačeŭnik"/>
   <string id="Khuzait Tribal Warrior" text="Chuzaicki Plamienny Vajar"/>
   <string id="Khuzait Shieldbreaker" text="Chuzaicki Rujnavalnik Ščytoŭ"/>
@@ -101,7 +101,7 @@
   <string id="Khuzait Trained Militia Archer" text="Chuzaicki Padrychtavany Łučnik Rušeńnia"/>
   <string id="Khuzait Militia" text="Chuzaicki Rušenny"/>
   <string id="Khuzait Trained Militia" text="Chuzaicki Padrychtavany Rušenny"/>
-  <string id="Toj0vayQ" text="Mońčah"/>
+  <string id="Toj0vayQ" text="Mončuh"/>
   <string id="KnhpjA7Y" text="Kalman"/>
   <string id="ghilmanUnit" text="Hilman"/>
   <string id="7EUhAv8b" text="Hułam"/>
@@ -165,31 +165,31 @@
   <string id="malethug" text="Bandyt"/>
   <string id="7aRhhGAs" text="Daśviedčany Bandyt"/>
   <string id="V1hoeBch" text="Bandyt-Majstar"/>
-  <string id="nDoENDqD" text="Eserajski Majstar Karavanaŭ"/>
+  <string id="nDoENDqD" text="Aserajski Majstar Karavanaŭ"/>
   <string id="LKb8DXby" text="Battanijski Majstar Karavanaŭ"/>
   <string id="TpECDErA" text="Impierski Majstar Karavanaŭ"/>
   <string id="WEHDGbEE" text="Chuzaicki Majstar Karavanaŭ"/>
   <string id="uDseaKcb" text="Sturhijski Majstar Karavanaŭ"/>
   <string id="QbSjMefR" text="Vłandyjski Majstar Karavanaŭ"/>
-  <string id="Aserai Hired Bowman" text="Eserajski Najomny Łučnik"/>
+  <string id="Aserai Hired Bowman" text="Aserajski Najomny Łučnik"/>
   <string id="Battanian Hired Bowman" text="Battanijski Najomny Łučnik"/>
   <string id="Imperial Hired Bowman" text="Impierski Najomny Łučnik"/>
   <string id="Khuzait Hired Bowman" text="Chuzaicki Najomny Łučnik"/>
   <string id="Sturgian Hired Bowman" text="Sturhijski Najomny Łučnik"/>
   <string id="Vlandian Hired Bowman" text="Vłandyjski Najomny Łučnik"/>
-  <string id="Aserai Caravan Trader" text="Eserajski Karavanny Handlar"/>
+  <string id="Aserai Caravan Trader" text="Aserajski Karavanny Handlar"/>
   <string id="Battanian Caravan Trader" text="Battanijski Karavanny Handlar"/>
   <string id="Imperial Caravan Trader" text="Impierski Karavanny Handlar"/>
   <string id="Khuzait Caravan Trader" text="Chuzaicki Karavanny Handlar"/>
   <string id="Sturgian Caravan Trader" text="Sturhijski Karavanny Handlar"/>
   <string id="Vlandian Caravan Trader" text="Vłandyjski Karavanny Handlar"/>
-  <string id="yG42k5GC" text="Eserajski Achoŭnik Karavanaŭ"/>
+  <string id="yG42k5GC" text="Aserajski Achoŭnik Karavanaŭ"/>
   <string id="qfaTMEBw" text="Battanijski Achoŭnik Karavanaŭ"/>
   <string id="TbBnWiao" text="Impierski Achoŭnik Karavanaŭ"/>
   <string id="THOfB9DZ" text="Chuzaicki Achoŭnik Karavanaŭ"/>
   <string id="pzmgMODE" text="Sturhijski Achoŭnik Karavanaŭ"/>
   <string id="rQ0t0Wws" text="Vłandyjski Achoŭnik Karavanaŭ"/>
-  <string id="QlVeZvbv" text="Eserajski Achoŭnik Karavanaŭ Vieteran"/>
+  <string id="QlVeZvbv" text="Aserajski Achoŭnik Karavanaŭ Vieteran"/>
   <string id="juBPAThy" text="Battanijski Achoŭnik Karavanaŭ Vieteran"/>
   <string id="bLq2HXMo" text="Impierski Achoŭnik Karavanaŭ Vieteran"/>
   <string id="6hhspFvz" text="Chuzaicki Achoŭnik Karavanaŭ Vieteran"/>
@@ -346,6 +346,6 @@
   <string id="Vlandian Trained Militia Crossbowman" text="Vłandyjski Padrychtavany Arbaletnik Rušeńnia"/>
   <string id="Vlandian Militia" text="Vłandyjski Rušenny"/>
   <string id="Vlandian Trained Militia" text="Vłandyjski Padrychtavany Rušenny"/>
-  <string id="jEIsVazl" text="Dertart"/>
+  <string id="jEIsVazl" text="Dertert"/>
  </strings>
 </base>
