--- a/пераклады модаў/CalradiaExpanded/а2.0.5/Belarusian.CalradiaExpanded/ModuleData/Languages/BYl/manual.xml
+++ b/пераклады модаў/CalradiaExpanded/а2.0.5/Belarusian.CalradiaExpanded/ModuleData/Languages/BYl/manual.xml
@@ -2,98 +2,98 @@
 <base xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema" type="string">
     <strings>
         <string id="CE_NV_EN16" text="Akrahora" />
-        <string id="CE_NV_EN1" text="Ahalman" />
+        <string id="CE_NV_EN1" text="Ahalmon" />
         <string id="CE_NV_AS12" text="Ajvalitas" />
         <string id="CE_NV_AS15" text="Ajvje" />
         <string id="CE_NV_EN10" text="Ałacis" />
         <string id="CE_NT_EW1" text="Amitacis" />
-        <string id="CE_NT_EN2" text="Ampryła" />
+        <string id="CE_NT_EN2" text="Ampreła" />
         <string id="CE_NT_EN1" text="Arharon" />
         <string id="CE_NV_EW2" text="Arpocis" />
-        <string id="CE_NV_VD13" text="Arromanč" />
-        <string id="CE_NV_BN10" text="Astar" />
-        <string id="CE_NC_BN2" text="Zamak Astar" />
+        <string id="CE_NV_VD13" text="Arromank" />
+        <string id="CE_NV_BN10" text="Aścier" />
+        <string id="CE_NC_BN2" text="Zamak Aścier" />
         <string id="CE_NV_ES14" text="Atfinija" />
         <string id="CE_NC_ES4" text="Zamak Atfinija" />
-        <string id="CE_NV_EN9" text="Ejtryjon" />
-        <string id="CE_NC_EN1" text="Zamak Ejtryjon" />
-        <string id="CE_NV_EN15" text="Evasintan" />
-        <string id="CE_NV_EW21" text="Bierham" />
-        <string id="CE_NV_BN8" text="Boh Bet" />
+        <string id="CE_NV_EN9" text="Atryjon" />
+        <string id="CE_NC_EN1" text="Zamak Atryjon" />
+        <string id="CE_NV_EN15" text="Avasinton" />
+        <string id="CE_NV_EW21" text="Bierhum" />
+        <string id="CE_NV_BN8" text="Boh Biech" />
         <string id="CE_NV_VD6" text="Bojsmanč" />
         <string id="CE_NV_SG14" text="Borčavahorka" />
-        <string id="CE_NV_AS10" text="Bankaz" />
-        <string id="CE_NV_ES11" text="Kajra" />
+        <string id="CE_NV_AS10" text="Bunkaz" />
+        <string id="CE_NV_ES11" text="Kaira" />
         <string id="CE_NV_VD10" text="Kałfiłd" />
         <string id="CE_NC_BN3" text="Zamak Kantrek" />
         <string id="CE_NV_EN19" text="Kaporełła" />
         <string id="CE_NV_EW12" text="Karpany" />
-        <string id="CE_NV_ES8" text="Karynija" />
+        <string id="CE_NV_ES8" text="Korenija" />
         <string id="CE_NV_ES10" text="Kocisija" />
         <string id="CE_NV_BN1" text="Dałdorn" />
-        <string id="CE_NC_BN1" text="Zamak Druimor" />
+        <string id="CE_NC_BN1" text="Zamak Drummor" />
         <string id="CE_NV_EW14" text="Elipa" />
         <string id="CE_NC_EW3" text="Zamak Elvanija" />
         <string id="CE_NV_EN6" text="Eparaos" />
-        <string id="CE_NV_ES12" text="Erebułas" />
-        <string id="CE_NC_ES3" text="Zamak Erebułas" />
+        <string id="CE_NV_ES12" text="Erebułos" />
+        <string id="CE_NC_ES3" text="Zamak Erebułos" />
         <string id="CE_NC_SG3" text="Zamak Foryn" />
         <string id="CE_NV_EW7" text="Hamardan" />
-        <string id="CE_NV_EW4" text="Harontar" />
-        <string id="CE_NC_EW1" text="Zamak Harontar" />
+        <string id="CE_NV_EW4" text="Harantor" />
+        <string id="CE_NC_EW1" text="Zamak Harantor" />
         <string id="CE_NV_EW19" text="Harsehaŭz" />
         <string id="CE_NC_EW5" text="Zamak Harsehaŭz" />
-        <string id="CE_NV_BN4" text="Hlintar" />
+        <string id="CE_NV_BN4" text="Hlintor" />
         <string id="CE_NV_EW18" text="Haleryn" />
         <string id="CE_NC_EW6" text="Zamak Haleryn" />
         <string id="CE_NV_SG10" text="Charojnbi" />
-        <string id="CE_NV_EN12" text="Hietonija" />
+        <string id="CE_NV_EN12" text="Hietanija" />
         <string id="CE_NV_VD11" text="Chalcdorf" />
         <string id="CE_NV_VD3" text="Chormdak" />
         <string id="CE_NV_BN2" text="Jaskin" />
-        <string id="CE_NV_BN11" text="Imłahch" />
-        <string id="CE_NC_BN4" text="Zamak Inviez" />
-        <string id="CE_NV_ES4" text="Džoharys" />
-        <string id="CE_NC_ES1" text="Zamak Džoharys" />
-        <string id="CE_NV_EW9" text="Łabłenijon" />
+        <string id="CE_NV_BN11" text="Imłah" />
+        <string id="CE_NC_BN4" text="Zamak Inviech" />
+        <string id="CE_NV_ES4" text="Johurys" />
+        <string id="CE_NC_ES1" text="Zamak Johurys" />
+        <string id="CE_NV_EW9" text="Leblenijon" />
         <string id="CE_NV_EW13" text="Lehnano" />
         <string id="CE_NC_EW4" text="Zamak Lehnano" />
-        <string id="CE_NV_EN13" text="Łokana" />
-        <string id="CE_NV_EW5" text="Łajsija" />
-        <string id="CE_NV_EN8" text="Masynhara" />
+        <string id="CE_NV_EN13" text="Łochana" />
+        <string id="CE_NV_EW5" text="Lisija" />
+        <string id="CE_NV_EN8" text="Masanhara" />
         <string id="CE_NV_ES9" text="Mietachija" />
         <string id="CE_NC_ES2" text="Zamak Mietachija" />
         <string id="CE_NV_VD5" text="Mot" />
-        <string id="CE_NT_EN3" text="Majzieja" />
+        <string id="CE_NT_EN3" text="Mizeja" />
         <string id="CE_NV_KZ2" text="Vokuchi" />
         <string id="CE_NV_EN3" text="Pałos" />
-        <string id="CE_NV_EW15" text="Fejsas" />
+        <string id="CE_NV_EW15" text="Fasos" />
         <string id="CE_NV_ES17" text="Popsija" />
         <string id="CE_NT_ES3" text="Poras" />
-        <string id="CE_NV_ES5" text="Psataj" />
+        <string id="CE_NV_ES5" text="Psotaj" />
         <string id="CE_NV_KZ3" text="Rarodžen" />
         <string id="CE_NT_SG3" text="Revił" />
-        <string id="CE_NV_EN4" text="Resas" />
+        <string id="CE_NV_EN4" text="Resos" />
         <string id="CE_NV_EN18" text="Roŭzana" />
-        <string id="CE_NV_SG9" text="Sordas" />
-        <string id="CE_NC_SG4" text="Zamak Sordas" />
+        <string id="CE_NV_SG9" text="Šordas" />
+        <string id="CE_NC_SG4" text="Zamak Šordas" />
         <string id="CE_NV_ES15" text="Spocija" />
         <string id="CE_NV_VD12" text="Surhrok" />
-        <string id="CE_NV_BN3" text="Śvienryn" />
-        <string id="CE_NT_ES2" text="Sajraneja" />
+        <string id="CE_NV_BN3" text="Švienryn" />
+        <string id="CE_NT_ES2" text="Sironeja" />
         <string id="CE_NV_EW11" text="Tarkucis" />
         <string id="CE_NV_EN14" text="Ciemonč" />
         <string id="CE_NV_KZ5" text="Ciempunier" />
-        <string id="CE_NV_EW6" text="Traktaraj" />
-        <string id="CE_NC_EW2" text="Zamak Traktaraj" />
+        <string id="CE_NV_EW6" text="Traktorae" />
+        <string id="CE_NC_EW2" text="Zamak Traktorae" />
         <string id="CE_NV_KZ8" text="Ciksier" />
         <string id="CE_NV_ES18" text="Trypiessa" />
         <string id="CE_NC_ES5" text="Zamak Trypatamija" />
         <string id="CE_NV_AS11" text="Ukba" />
         <string id="CE_NV_ES7" text="Varhornis" />
         <string id="CE_NV_EW20" text="Vateja" />
-        <string id="CE_NV_EW17" text="Vieran" />
-        <string id="CE_NV_EW3" text="Vajneła" />
+        <string id="CE_NV_EW17" text="Vieron" />
+        <string id="CE_NV_EW3" text="Vineła" />
         <string id="CE_NT_SG4" text="Varčieh" />
     </strings>
 </base>
